Spotless apply for branch NEI-Alternate-Display-Fix for #4708 (#4711)